# postcard-plotter-web

./: .gitignore  .replit  LICENSE  Pasted--Attempting-to-connect-to-AxiDraw-Connected-in-development-mode-all-operations-will-be-simulate-1734235370183.txt  Pasted--Status-Message-plotted-successfully-Attempting-to-connect-to-AxiDraw-Connected-in-development-mo-1734237716491.txt  Pasted-Attempting-to-connect-to-AxiDraw-Connected-in-development-mode-all-operations-will-be-simulated-1734234946716.txt  Pasted-Attempting-to-connect-to-AxiDraw-Connected-in-development-mode-all-operations-will-be-simulated-1734235178679.txt  Pasted-Attempting-to-connect-to-AxiDraw-Connected-in-development-mode-all-operations-will-be-simulated-1734235491787.txt  Pasted-Attempting-to-connect-to-AxiDraw-Connected-in-development-mode-all-operations-will-be-simulated-1734235586736.txt  Pasted-Attempting-to-connect-to-AxiDraw-Connected-in-development-mode-all-operations-will-be-simulated-1734237502043.txt  Pasted-Message-plotted-successfully-Attempting-to-connect-to-AxiDraw-Connected-in-development-mode-all-1734235657471.txt  Pasted-Message-plotted-successfully-Attempting-to-connect-to-AxiDraw-Connected-in-development-mode-all-1734235727522.txt  Pasted-ttempting-to-connect-to-AxiDraw-Connected-in-development-mode-all-operations-will-be-simulated--1734237821330.txt  README.md  app.py  axidraw_controller.py  font_parser.py  main.py  pyproject.toml
static/css/: fonts.css  style.css
static/js/: axidraw.js  preview.js
templates/: index.html
