[project]
name = "postcard-plotter-web"
version = "0.1.0"
description = "A web interface for controlling AxiDraw Mini to write text on postcards with custom font support"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "email-validator>=2.2.0",
    "flask==3.0.0",
    "flask-socketio==5.3.6",
    "flask-sqlalchemy==3.1.1",
    "psycopg2-binary==2.9.9",
    "fonttools==4.47.0",
    "axicli",
    "pyserial==3.5",
    "eventlet==0.33.3",
]

[tool.uv.sources]
axicli = { url = "https://cdn.evilmadscientist.com/dl/ad/public/AxiDraw_API.zip" }
